# poetry-qiskit

./: README.md  flake.nix  poetry-git-overlay.nix  pub.sh  pyproject.toml
overrides/: cryptography.nix  pyscf.nix  qiskit-aer.nix  qiskit-terra.nix  ruff.nix  rustworkx.nix  symengine.nix
pkgs/project/: catalog.json  default.nix  flox.nix  manifest.json
pkgs/ruff/: default.nix
pkgs/rustworkx/: default.nix
